# telegram-bot-queue

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  backup.sh  bot.yml  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.cfg  tasks.py
bot/: Dockerfile  Makefile  pyproject.toml
bot/app/: __main__.py  alembic.ini  initialize.py  services.py
bot/app/database/: __init__.py  alembic.ini  connect.py
bot/app/database/connection/: __init__.py  connect.py
bot/app/database/migrations/: env.py
bot/app/database/migrations/versions/: 04b40d8736ce_relashionships.py  2024_06_11_1643-a33cac6e3ec5_.py  (+3 more)
bot/app/database/models/: __init__.py  base.py  completed_practices.py  group.py  queue.py  schedule.py  subject.py  user.py
bot/app/database/repositories/: __init__.py  base.py  completed_practices.py  completed_practices_actions.py  group.py  group_actions.py  queue.py  queue_actions.py  schedule.py  schedule_actions.py  subject.py  subject_actions.py  user.py  user_actions.py
bot/app/enums/: __init__.py  actions.py  commands.py  group.py  subject.py  week.py
bot/app/filters/: __init__.py  admin.py  user.py
bot/app/handlers/: admin.py  client.py  other.py
bot/app/keywords/: __init__.py  admin.py  client.py  other.py
bot/app/migrations/: env.py
bot/app/migrations/versions/: 04b40d8736ce_relashionships.py  7a7ff04119c7_initial.py  c08dcfc66564_queue_v2.py
bot/app/schedule_tasks/: services.py  tasks.py
bot/app/state/: __init__.py  complete_practice.py  edit_account.py  edit_events.py  edit_group.py  edit_subjects.py  select_group.py  send_message.py  set_headman.py  stay_queue.py
src/: Dockerfile  actions.py  alembic.ini  main.py  pyproject.toml  services.py  setup.cfg
src/celery_config/: celery_app.py  tasks.py
src/database/: __init__.py  base.py  connect.py  models.py  repository.py
src/database/models/: __init__.py  completed_practices.py  date.py  group.py  queue.py  schedule.py  subject.py  user.py
src/database/repositories/: __init__.py  completed_practices_actions.py  date_actions.py  group_actions.py  queue_actions.py  schedule_actions.py  subject_actions.py  user_actions.py
src/enums/: __init__.py  actions.py  classes.py  commands.py  week.py
src/handlers/: __init__.py  admin.py  client.py  commands.py  other.py
src/keywords/: __init__.py  admin.py  client.py  other.py
src/migrations/: env.py
src/migrations/versions/: 7a7ff04119c7_initial.py  c08dcfc66564_queue_v2.py
src/schedule_tasks/: __init__.py  services.py  tasks.py
src/state/: __init__.py  complete_practice.py  create_edit_group.py  create_subject.py  delete_account.py  delete_group.py  delete_subject.py  edit_account.py  edit_group.py  edit_subjects.py  select_group.py  send_message.py  set_headman.py  stay_queue.py
(+17 files in other folders)
