[tool.poetry]
name = "telegram_bot_queue"
version = "0.1.0"
description = ""
authors = ["Nazar <odddellarobea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "2.25.2"
SQLAlchemy = "1.4.52"
emoji = "2.1.0"
alembic = "1.13.1"
aioschedule = "0.5.2"
SQLAlchemy-Utils = "0.38.3"
asyncpg = "0.26.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
flake8 = "4.0.1"
flake8-isort = "4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
